Fix/profile
* fix: align route with openapi spec by using request.userId

* feat: update spec

* fix: align internal endpoint for user creation with auth requestbody
